Solved inappropriate overwrapping of div element. Adjusted padding for h2 About

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -21,11 +21,14 @@ body {
     top: 0;
 }
 
+.nav-wrapper {
+    z-index: 5;
+}
+
 nav {
     width: 100%;
     height: 50px;
     background-color: #1B242F;
-    z-index: 5;
 }
 
 div.menu-icon, .dropdown{
@@ -384,7 +387,7 @@ span.footer-year {
     }
 
     section#about {
-        padding: 10px 40px;
+        padding: 50px 40px;
     }
 
     .stack {
